Fix wrap guide alignment

--- a/styles/editor.less
+++ b/styles/editor.less
@@ -166,6 +166,7 @@ atom-text-editor.editor {
 
   .wrap-guide {
     background: none;
+    margin-left: 4px;
     border-right: 1px dotted @base-border-color;
   }
 
